--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
   "bugs": {
     "url": "https://github.com/the3rdPoliceman/Docs/issues"
   },
-  "homepage": "https://github.com/the3rdPoliceman/Docs#readme",
-  "dependencies": {
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
-    "popper": "^1.0.1"
-  }
   "devDependencies": {
-    "lite-server": "^2.5.4",
-  }
+    "lite-server": "^2.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
+  } 
 }
