--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "my documents ",
   "main": "index.html",
   "scripts": {
-    "start": "npm run lite",
+    "start": "npm run watch:all",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
-    "scss": "node-sass --watch scss -o css"
+    "scss": "node-sass scss -o css",
+    "watch:scss": "onchange 'scss/*.scss' -- npm run scss",
+    "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,9 @@
   },
   "devDependencies": {
     "lite-server": "^2.3.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "onchange": "^3.3.0",
+    "parallelshell": "^3.0.1"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
